# mail_classifier

./: README.md  classifier_agent.py  config.py  mail_reader.py  main.py  prompt.txt  pyproject.toml  sheet_writer.py
