[project]
name = "classifier"
version = "0.1.0"
description = "We develop IA agent with can classifier mail"
authors = [
    {name = "TchappiR",email = "tchappiromaric@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client (>=2.193.0,<3.0.0)",
    "google-auth-httplib2 (>=0.3.0,<0.4.0)",
    "google-auth-oauthlib (>=1.3.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "groq (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
